# meterocr

./: .gitignore  CLAUDE.md  README.md  autolabel.sh  capture_frame.py  capture_frame_stable.py  maybe_upload_latest_images.sh  post_capture.sh  pre_capture.sh  pyproject.toml  test_focus.sh
configs/: defaults.yaml  meters.yaml  www.yaml
fswebcamstuff/: capture_fswebcam.sh  perspective_correct.sh
plans/: water_meter_ocr_implementation_spec.md  water_meter_ocr_plan.md
src/meterocr/: __init__.py  align.py  capture.py  cli.py  dataset.py  evaluate.py  features.py  labeling.py  meter_config.py  model_io.py  normalize.py  predict.py  review.py  segment.py  temporal.py  train.py  types.py  utils.py  www.py
tests/: conftest.py  test_align.py  test_capture.py  test_features.py  test_normalize.py  test_predict.py  test_segment.py  test_temporal.py  test_train.py
tools/: pick_corners.py
